--- a/frontend/envirevent/src/app/donator-events/donator-events.component.html
+++ b/frontend/envirevent/src/app/donator-events/donator-events.component.html
@@ -20,19 +20,33 @@
   </div>
 
 <h4>Event Modes</h4>
-  <div class="form-check">
-  <input class="form-check-input" type="radio" name="exampleRadios" id="individual" value="option1" checked>
-  <label class="form-check-label" for="exampleRadios1">
-    Individual
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="exampleRadios" id="eventmode" value="option2">
-  <label class="form-check-label" for="exampleRadios2">
-    Team
-  </label>
-</div>
+<span>  
+  <span class="form-check">
+    <input class="form-check-input" type="radio" name="exampleRadios" id="individual" value="option1" checked>
+    <label class="form-check-label" for="exampleRadios1">
+      Individual
+    </label>
+  </span>
+  
+  <span class="form-check">
+    <input class="form-check-input" type="radio" name="exampleRadios" id="eventmode" value="option2">
+    <label class="form-check-label" for="exampleRadios2">
+      Team
+    </label>
+  </span>
+</span>
 
+<h4>Date Of the Event</h4>
+
+<span>
+  Start Date:
+  <input type="date" name="start">
+</span>
+
+<span style="margin-left:40px">
+    End Date:
+    <input type="date" name="End">
+  </span>
 
   </form>
 </div>
