--- a/frontend/envirevent/src/app/donator-mainpage/donator-mainpage.component.html
+++ b/frontend/envirevent/src/app/donator-mainpage/donator-mainpage.component.html
@@ -22,7 +22,7 @@
     <br>
     <br>
     <div class="col-6 col-md-4"><a href="donor/leaderboard"><button type="button" class=" btn-block btn btn-outline-secondary">LEADERBOARD</button></a></div>
-    <div class="col-6 col-md-4"><a href="maps"><button type="button" class=" btn-block btn btn-outline-secondary">SHOPS NEARBY</button></a></div>
+    <div class="col-6 col-md-4"><a href="donor/maps"><button type="button" class=" btn-block btn btn-outline-secondary">SHOPS NEARBY</button></a></div>
     
   </div>
 </div>
