--- a/frontend/envirevent/src/app/donator-transaction/donator-transaction.component.html
+++ b/frontend/envirevent/src/app/donator-transaction/donator-transaction.component.html
@@ -8,38 +8,38 @@
         <br><br>
         <ul >
             <li><a><div class="form-group col-10">
-          <span><input [(ngModel)]="tetraPack" type="number" class=" col-lg-4" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
+          <span><input  type="number" class=" col-lg-4" id="tetraPack" name="tetraPack" placeholder="Tetra Pack">
             <span class="col-lg-1"></span>
             <label for="points">Points:abc points</label>
           
               <span class="col-lg-1"></span>
-              <button type="submit" class="btn btn-primary col-lg-12" >Submit</button>
+              <button type="submit" class="btn btn-primary col-lg-4" >Submit</button>
          </span>
 
           </div></a></li>
         
           <li><a  ><div class="form-group col-10">
-            <span><input [(ngModel)]="cardboard" type="number" class=" col-lg-4" id="cardboard" name="cardboard" placeholder="Card Board">
+            <span><input type="number" class=" col-lg-4" id="cardboard" name="cardboard" placeholder="Card Board">
               <span class="col-lg-1"></span>
               <label for="points">Points:abc points</label>
               <span class="col-lg-1"></span>
-              <button type="submit" class="btn btn-primary col-lg-12" >Submit</button>
+              <button type="submit" class="btn btn-primary col-lg-4" >Submit</button>
             </span>
              </div></a></li>
         <li><a  > <div class="form-group col-10">
-              <span><input [(ngModel)]="glassBottle" type="number" class=" col-lg-4" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
+              <span><input  type="number" class=" col-lg-4" id="glassBottle" name="glassBottle" placeholder="Glass Bottle">
                 <span class="col-lg-1"></span>
                 <label for="points">Points:abc points</label>
                <span class="col-lg-1"></span>  
-              <button type="submit" class="btn btn-primary col-lg-12" >Submit</button>
+              <button type="submit" class="btn btn-primary col-lg-4" >Submit</button>
               </span>
                </div></a></li>
         <li><a  ><div class="form-group col-10">
-              <span><input [(ngModel)]="plasticBottle" type="number" class=" col-lg-4" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
+              <span><input  type="number" class=" col-lg-4" id="plasticBottle" name="plasticBottle" placeholder="Platic Bottle">
                 <span class="col-lg-1"></span>
                 <label for="points">Points:abs points</label>
               <span class="col-lg-1"></span> 
-              <button type="submit" class="btn btn-primary col-lg-12" >Submit</button>
+              <button type="submit" class="btn btn-primary col-lg-4" >Submit</button>
               </span>
                  </div></a></li>
           </ul>
