--- a/frontend/envirevent/src/app/collector-verify/collector-verify.component.html
+++ b/frontend/envirevent/src/app/collector-verify/collector-verify.component.html
@@ -1,7 +1,49 @@
-<qr-scanner
+<!-- <qr-scanner
         [debug]="false"
         [canvasWidth]="320" 
         [canvasHeight]="480" 
         [stopAfterScan]="true" 
         [updateTime]="500" > 
-</qr-scanner>
+</qr-scanner> -->
+
+<input type="text" class="form-control" id="rule1"  placeholder="Number Varification" >
+
+      
+        <button class="btn btn-primary dropdown-toggle col-lg-11" type="button" (click)="toggle()">TRANSACTION MANAGEMENT
+        <span class="caret"></span></button>
+        
+        <ng-container *ngIf="show">  
+        <ul >
+          <li><a  ><div class="form-group col-lg-10">
+          <span> <label type="text" class=" col-lg-4 col-lg-12" id="points">tetra pack : 10 bottles</label>
+            <span class="col-lg-1"></span>
+          <label for="points">Points:abc points</label>
+            <span class="col-lg-1"></span>
+          </span>
+            </div></a></li>
+
+          <li><a  ><div class="form-group col-lg-10">
+          <span> <label type="text" class=" col-lg-4" id="points">tetra pack : 10 bottles</label>
+            <span class="col-lg-1"></span>
+          <label for="points">Points:abc points</label>
+            <span class="col-lg-1"></span>
+          </span>
+            </div></a></li>
+
+          <li><a  ><div class="form-group col-lg-10">
+          <span> <label type="text" class=" col-lg-4" id="points">tetra pack : 10 bottles</label>
+            <span class="col-lg-1"></span>
+          <label for="points">Points:abc points</label>
+            <span class="col-lg-1"></span>
+          </span>
+            </div></a></li>
+
+          <li><a  ><div class="form-group col-lg-10">
+          <span> <label type="text" class=" col-lg-4" id="points">tetra pack : 10 bottles</label>
+            <span class="col-lg-1"></span>
+          <label for="points">Points:abc points</label>
+            <span class="col-lg-1"></span>
+          </span>
+            </div></a></li>
+        </ul>
+      </ng-container>
