--- a/frontend/envirevent/src/app/collector-mainpage/collector-mainpage.component.html
+++ b/frontend/envirevent/src/app/collector-mainpage/collector-mainpage.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
     <div class="row">
-      <!-- <br>
+      <br>
       <br>
       <br>
       <br>
@@ -11,7 +11,7 @@
       <br>
       <br>
       <br>
-      <div class="col-12 col-md-4"><a href="collector/verify"><button type="button" class="btn btn-outline-secondary  btn-block">VERIFY</button></a></div>
+      <div class="col-12 col-md-4"><button type="button" class="btn btn-outline-secondary  btn-block">RECYCLE</button></div>
       <br>
       <br>
       <br>
@@ -19,7 +19,7 @@
       <br>
       <br>
       <br>
-      <div class="col-12 col-md-4"><a href="collector/wallet"><button type="button" class=" btn-block btn btn-outline-secondary">WALLET</button></a></div>
+      <div class="col-12 col-md-4"><button type="button" class=" btn-block btn btn-outline-secondary">LEADERBOARD</button></div>
       
     </div>
   </div>
