--- a/frontend/envirevent/src/app/collector-verify/collector-verify.component.html
+++ b/frontend/envirevent/src/app/collector-verify/collector-verify.component.html
@@ -1,15 +1,17 @@
-<qr-scanner
+<!-- <qr-scanner
         [debug]="false"
         [canvasWidth]="320" 
         [canvasHeight]="480" 
         [stopAfterScan]="true" 
         [updateTime]="500" > 
-</qr-scanner> -->
+</qr-scanner> --> 
 
 <input type="text" class="form-control" id="rule1"  placeholder="Number Varification" >
 
+<button class="btn btn-primary col-lg-11"  >Submit
+        </button>
       
-        <button class="btn btn-primary dropdown-toggle col-lg-11" type="button" (click)="toggle()">TRANSACTION MANAGEMENT
+        <!-- <button class="btn btn-primary dropdown-toggle col-lg-11" type="button" (click)="toggle()">TRANSACTION MANAGEMENT
         <span class="caret"></span></button>
         
         <ng-container *ngIf="show">  
@@ -46,4 +48,4 @@
           </span>
             </div></a></li>
         </ul>
-      </ng-container>
+      </ng-container> -->
