--- a/frontend/envirevent/src/app/login/login.component.html
+++ b/frontend/envirevent/src/app/login/login.component.html
@@ -44,9 +44,9 @@ e.preventDefault();
 						</div>
 						<hr>
           </div>
-          
 
-          
+
+
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
@@ -72,7 +72,7 @@ e.preventDefault();
 										<div class="row">
 											<div class="col-lg-12">
 												<div class="text-center">
-													<a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a> 
+													<a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
 												</div>
 											</div>
 										</div>
@@ -88,15 +88,16 @@ e.preventDefault();
 									<div class="form-group">
 										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 									</div>
-									<div class=" form-group">
-											<input (click)="onSelectCheckBox(1)" class="form-check-input" tabindex="3" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-											<label class="form-check-label" for="exampleRadios1">
+									<div class="  custom-control custom-radio">
+											<input (click)="onSelectCheckBox(1)" class="custom-control-input" tabindex="3" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+											<label class="custom-control-label" for="exampleRadios1">
 												  	Register as User
 											</label>
 										  </div>
-										  <div class=" form-group">
-											<input (click)="onSelectCheckBox(2)" class="form-check-input"  tabindex="3" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-											<label class="form-check-label" for="exampleRadios2">
+                      <br>
+										  <div class=" custom-control custom-radio">
+											<input (click)="onSelectCheckBox(2)" class="custom-control-input"  tabindex="3" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+											<label class="custom-control-label" for="exampleRadios2">
 											    Register as Collection Point
 											</label>
 										  </div>
