--- a/frontend/envirevent/src/app/collector-wallet/collector-wallet.component.html
+++ b/frontend/envirevent/src/app/collector-wallet/collector-wallet.component.html
@@ -9,11 +9,9 @@
        
         <div class="card-body">
           <p>
-            Total Points : 60pts
+            Total Points : {{ balance }} points
           </p>
-          <p>
-            Total Money : 60 rupees
-          </p>
+
         </div>
       </div>
       
