--- a/frontend/envirevent/src/app/collector/collector.component.html
+++ b/frontend/envirevent/src/app/collector/collector.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- <a class="navbar-brand" href="/doctor">Dr.{{ this.username }}</a> -->
-    <button (click)="_toggleSidebar()"  class="btn btn-outline-secondary btn-lg">Holla</button>
+    <button (click)="_toggleSidebar()"  class="btn btn-outline-secondary btn-lg">Navigate</button>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" (click)="isActive = !isActive">
       <span class="navbar-toggler-icon"></span>
     </button>
