--- a/frontend/envirevent/src/app/donator-events/donator-events.component.1.html
+++ b/frontend/envirevent/src/app/donator-events/donator-events.component.1.html
@@ -13,8 +13,7 @@
   </div>
 
   <div class="form-group">
-    <label for="rules">Rules</label>123
-    
+    <label for="rules">Rules</label>
     <input type="text" class="form-control" id="rule1"  placeholder="Rule1"><br>
     <input type="text" class="form-control" id="rule2"  placeholder="Rule2"><br>
     <input type="text" class="form-control" id="rule3"  placeholder="Rule3"><br>
@@ -24,16 +23,20 @@
 <span>  
   <span class="form-check">
     <input class="form-check-input" type="radio" name="exampleRadios" id="individual" value="option1" checked>
+    <label class="form-check-label" for="exampleRadios1">
       Individual
+    </label>
   </span>
-
+  
   <span class="form-check">
     <input class="form-check-input" type="radio" name="exampleRadios" id="eventmode" value="option2">
-        Team  
+    <label class="form-check-label" for="exampleRadios2">
+      Team
+    </label>
   </span>
 </span>
 
-<h4 align="center" >Date Of the Event</h4>  
+<h4>Date Of the Event</h4>
 
 <span>
   Start Date:
@@ -47,32 +50,3 @@
 
   </form>
 </div>
-
-<br>
-<br>
-
-<table>
-    <tr>
-      <th>Pizes</th>
-      <th>Rewards</th>
-    </tr>
-    <tr>
-      <td>1st</td>
-      <td>AWS lifetime</td>
-    </tr>
-    <tr>
-      <td>2nd</td>
-      <td>AWS haf life time</td>
-    </tr>
-    <tr>
-      <td>3rd</td>
-      <td>AWS quater lifetime</td>
-  </tr>
-  </table>
-
-<br><br>
-
-  <div align="center">
-      <button  class="btn btn-primary" style="width:50%">Submit</button>
-  </div>
-  
