--- a/frontend/envirevent/src/app/donator-quest/donator-quest.component.html
+++ b/frontend/envirevent/src/app/donator-quest/donator-quest.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="background: linear-gradient(to bottom left, #afffb2 14%, #00ffff 100%);" >
-  <div class="card-body text-center eventFont textGreen">Event Name <i class="fas fa-recycle"></i> </div>
+  <div class="card-body text-center eventFont textGreen"> GREENATHON <i class="fas fa-recycle"></i> </div>
   <hr>
 
  
