--- a/frontend/envirevent/src/app/donator-qrcode/donator-qrcode.component.html
+++ b/frontend/envirevent/src/app/donator-qrcode/donator-qrcode.component.html
@@ -1,9 +1,9 @@
 <br>
-<div align="center">
-    <qrcode [qrdata]="myAngularxQrCode" [size]="200" [level]="'M'"></qrcode>
-</div>
-
 <br>
+
+<label>
+    id generated = {{myAngular}}
+</label>
 
 <div>
   <label>
